--- a/index.html
+++ b/index.html
@@ -119,5 +119,6 @@
       e transformar em um sistema mais robusto com backend.
     </p>
   </div>
+  <script src="script.js"></script>
 </body>
 </html>
